[package]
name = "kokkupanek"
description = """
    Another scheduler based on wasm
"""
version = "0.1.0"

[dependencies]
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
log = "0.4.1"
matches = "0.1.6"

# only for scheduler itself (make them optional?)
juniper = {version="0.9.2", default-features=false}
