[package]
name = "kokkupanek"
description = """
    Another scheduler based on wasm
"""
version = "0.1.0"

[dependencies]
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
serde_millis = "0.1.0"
log = "0.4.1"
matches = "0.1.6"
rand = "0.4.2"
failure = "0.1.1"

# only for scheduler itself (make them optional?)
juniper = { git="https://github.com/graphql-rust/juniper", rev="7933bf9", default-features=false, optional=true }

[features]
default = ["graphql"]
graphql = ["juniper"]
